[package]
edition.workspace = true
name              = "vprogs-l1-bridge"
version.workspace = true

[dependencies]
arc-swap.workspace             = true
crossbeam-queue.workspace      = true
futures.workspace              = true
kaspa-consensus-core.workspace = true
kaspa-notify.workspace         = true
kaspa-rpc-core.workspace       = true
kaspa-seq-commit.workspace     = true
kaspa-wrpc-client.workspace    = true
log.workspace                  = true
tap.workspace                  = true
thiserror.workspace            = true
tokio.workspace                = true
vprogs-core-atomics.workspace  = true
vprogs-core-macros.workspace   = true
vprogs-core-types.workspace    = true
vprogs-l1-types.workspace      = true
workflow-core.workspace        = true

[dev-dependencies]
borsh.workspace = true
tokio = { workspace = true, features = [
  "rt-multi-thread",
  "macros",
  "time",
  "net",
] }
tokio-tungstenite.workspace = true
vprogs-node-test-utils.workspace = true
vprogs-storage-canonical-chain.workspace = true
workflow-rpc.workspace = true
workflow-serializer.workspace = true
