[package]
edition.workspace = true
name              = "vprogs-l1-types"
version.workspace = true

[dependencies]
borsh.workspace                = true
kaspa-consensus-core.workspace = true
kaspa-hashes.workspace         = true
kaspa-wrpc-client.workspace    = true
vprogs-core-types.workspace    = true
