[package]
edition.workspace = true
name              = "vprogs-node-cli"
version.workspace = true

[[bin]]
name = "vprogs-node"
path = "src/main.rs"

[dependencies]
clap.workspace                         = true
ctrlc.workspace                        = true
env_logger.workspace                   = true
figment.workspace                      = true
log.workspace                          = true
serde.workspace                        = true
vprogs-node-framework.workspace        = true
vprogs-node-l1-bridge.workspace        = true
vprogs-node-vm.workspace               = true
vprogs-scheduling-scheduler.workspace  = true
vprogs-storage-manager.workspace       = true
vprogs-storage-rocksdb-store.workspace = true
vprogs-storage-types.workspace         = true
