[package]
edition.workspace = true
name              = "vprogs-node-framework"
version.workspace = true

[dependencies]
borsh.workspace                       = true
log.workspace                         = true
thiserror.workspace                   = true
tokio.workspace                       = true
vprogs-core-atomics.workspace         = true
vprogs-core-macros.workspace          = true
vprogs-core-types.workspace           = true
vprogs-l1-bridge.workspace            = true
vprogs-l1-types.workspace             = true
vprogs-scheduling-scheduler.workspace = true
vprogs-storage-manager.workspace      = true
vprogs-storage-types.workspace        = true

[dev-dependencies]
borsh.workspace                        = true
tempfile.workspace                     = true
tokio                                  = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }
vprogs-core-test-utils.workspace       = true
vprogs-node-test-utils.workspace       = true
vprogs-state-metadata.workspace        = true
vprogs-storage-rocksdb-store.workspace = true
