[package]
edition.workspace = true
name              = "vprogs-node-l1-bridge"
version.workspace = true

[dependencies]
crossbeam-queue.workspace      = true
futures.workspace              = true
kaspa-consensus-core.workspace = true
kaspa-notify.workspace         = true
kaspa-rpc-core.workspace       = true
kaspa-wrpc-client.workspace    = true
log.workspace                  = true
thiserror.workspace            = true
tokio.workspace                = true
workflow-core.workspace        = true

[dev-dependencies]
tokio                            = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }
vprogs-node-test-suite.workspace = true
