[package]
edition.workspace = true
name              = "vprogs-node-l1-bridge"
version.workspace = true

[dependencies]
arc-swap.workspace             = true
crossbeam-queue.workspace      = true
futures.workspace              = true
kaspa-consensus-core.workspace = true
kaspa-hashes.workspace         = true
kaspa-notify.workspace         = true
kaspa-rpc-core.workspace       = true
kaspa-wrpc-client.workspace    = true
log.workspace                  = true
tap.workspace                  = true
thiserror.workspace            = true
tokio.workspace                = true
vprogs-core-macros.workspace   = true
vprogs-core-types.workspace    = true
workflow-core.workspace        = true

[dev-dependencies]
tokio                            = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }
vprogs-node-test-suite.workspace = true
