[package]
edition = "2021"
name    = "vprogs-node-test-suite"
version = "0.1.0"

[dependencies]
futures                   = "0.3"
kaspa-addresses           = { git = "https://github.com/kaspanet/rusty-kaspa", branch = "master" }
kaspa-consensus-core      = { git = "https://github.com/kaspanet/rusty-kaspa", branch = "master" }
kaspa-core                = { git = "https://github.com/kaspanet/rusty-kaspa", branch = "master" }
kaspa-grpc-client         = { git = "https://github.com/kaspanet/rusty-kaspa", branch = "master" }
kaspa-rpc-core            = { git = "https://github.com/kaspanet/rusty-kaspa", branch = "master" }
kaspa-testing-integration = { git = "https://github.com/kaspanet/rusty-kaspa", branch = "master" }
kaspa-wrpc-server         = { git = "https://github.com/kaspanet/rusty-kaspa", branch = "master" }
kaspad                    = { git = "https://github.com/kaspanet/rusty-kaspa", branch = "master" }
tokio                     = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
