[package]
edition.workspace = true
name              = "vprogs-node-test-suite"
version.workspace = true

[dependencies]
futures.workspace                   = true
kaspa-addresses.workspace           = true
kaspa-consensus-core.workspace      = true
kaspa-core.workspace                = true
kaspa-grpc-client.workspace         = true
kaspa-rpc-core.workspace            = true
kaspa-testing-integration.workspace = true
kaspa-wrpc-server.workspace         = true
kaspad.workspace                    = true
tokio                               = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }
vprogs-node-l1-bridge.workspace     = true
