[package]
edition.workspace = true
name              = "vprogs-node-test-suite"
version.workspace = true

[dependencies]
borsh.workspace                        = true
kaspa-addresses.workspace              = true
kaspa-consensus-core.workspace         = true
kaspa-core.workspace                   = true
kaspa-grpc-client.workspace            = true
kaspa-rpc-core.workspace               = true
kaspa-testing-integration.workspace    = true
kaspa-txscript.workspace               = true
kaspa-wrpc-server.workspace            = true
kaspad.workspace                       = true
secp256k1.workspace                    = true
serde_json.workspace                   = true
tap.workspace                          = true
tempfile.workspace                     = true
tokio                                  = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }
vprogs-core-types.workspace            = true
vprogs-node-framework.workspace        = true
vprogs-node-l1-bridge.workspace        = true
vprogs-scheduling-scheduler.workspace  = true
vprogs-scheduling-test-suite.workspace = true
vprogs-state-metadata.workspace        = true
vprogs-state-space.workspace           = true
vprogs-state-version.workspace         = true
vprogs-storage-rocksdb-store.workspace = true
vprogs-storage-types.workspace         = true
