[package]
edition.workspace = true
name              = "vprogs-node-vm"
version.workspace = true

[dependencies]
vprogs-l1-bridge.workspace                               = true
vprogs-l1-types.workspace                                = true
vprogs-node-framework.workspace                          = true
vprogs-scheduling-scheduler.workspace                    = true
vprogs-state-space.workspace                             = true
vprogs-storage-types.workspace                           = true
vprogs-transaction-runtime.workspace                     = true
vprogs-transaction-runtime-error.workspace               = true
vprogs-transaction-runtime-object-access.workspace       = true
vprogs-transaction-runtime-object-id.workspace           = true
vprogs-transaction-runtime-transaction.workspace         = true
vprogs-transaction-runtime-transaction-effects.workspace = true
