[package]
edition.workspace = true
name              = "vprogs-node-vm"
version.workspace = true

[dependencies]
vprogs-l1-types.workspace                                = true
vprogs-scheduling-scheduler.workspace                    = true
vprogs-storage-types.workspace                           = true
vprogs-transaction-runtime-error.workspace               = true
vprogs-transaction-runtime-transaction-effects.workspace = true
