[package]
edition = "2021"
name    = "vprogs-scheduling-scheduler"
version = "0.1.0"

[dependencies]
arc-swap                            = "1.7"
crossbeam-deque                     = "0.8.6"
crossbeam-queue                     = "0.3.12"
num_cpus                            = "1.17.0"
tap                                 = "1.0.1"
tokio                               = { version = "1.48.0", features = ["rt", "sync"] }
vprogs-core-atomics                 = { path = "../../core/atomics" }
vprogs-core-macros                  = { path = "../../core/macros" }
vprogs-core-types                   = { path = "../../core/types" }
vprogs-scheduling-execution-workers = { path = "../execution-workers" }
vprogs-state-metadata               = { path = "../../state/metadata" }
vprogs-state-ptr-latest             = { path = "../../state/ptr-latest" }
vprogs-state-ptr-rollback           = { path = "../../state/ptr-rollback" }
vprogs-state-space                  = { path = "../../state/space" }
vprogs-state-version                = { path = "../../state/version" }
vprogs-storage-manager              = { path = "../../storage/manager" }
vprogs-storage-types                = { path = "../../storage/types" }
