[package]
edition.workspace = true
name              = "vprogs-scheduling-scheduler"
version.workspace = true

[dependencies]
arc-swap.workspace                            = true
crossbeam-deque.workspace                     = true
crossbeam-queue.workspace                     = true
num_cpus.workspace                            = true
tap.workspace                                 = true
tokio.workspace                               = true
vprogs-core-atomics.workspace                 = true
vprogs-core-macros.workspace                  = true
vprogs-core-types.workspace                   = true
vprogs-scheduling-execution-workers.workspace = true
vprogs-state-batch-metadata.workspace         = true
vprogs-state-metadata.workspace               = true
vprogs-state-ptr-latest.workspace             = true
vprogs-state-ptr-rollback.workspace           = true
vprogs-state-space.workspace                  = true
vprogs-state-version.workspace                = true
vprogs-storage-manager.workspace              = true
vprogs-storage-types.workspace                = true
