[package]
edition = "2021"
name    = "vprogs-scheduling-test-suite"
version = "0.1.0"

[dependencies]
tempfile                     = "3.23.0"
vprogs-core-types            = { path = "../../core/types" }
vprogs-scheduling-scheduler  = { path = "../scheduler" }
vprogs-state-metadata        = { path = "../../state/metadata" }
vprogs-state-ptr-rollback    = { path = "../../state/ptr-rollback" }
vprogs-state-space           = { path = "../../state/space" }
vprogs-state-version         = { path = "../../state/version" }
vprogs-storage-manager       = { path = "../../storage/manager" }
vprogs-storage-rocksdb-store = { path = "../../storage/rocksdb-store" }
vprogs-storage-types         = { path = "../../storage/types" }
