[package]
edition.workspace = true
name              = "vprogs-scheduling-test-suite"
version.workspace = true

[dependencies]
tempfile.workspace                     = true
vprogs-core-types.workspace            = true
vprogs-scheduling-scheduler.workspace  = true
vprogs-state-metadata.workspace        = true
vprogs-state-ptr-rollback.workspace    = true
vprogs-state-space.workspace           = true
vprogs-state-version.workspace         = true
vprogs-storage-manager.workspace       = true
vprogs-storage-rocksdb-store.workspace = true
vprogs-storage-types.workspace         = true
