[package]
edition.workspace = true
name              = "vprogs-scheduling-test-utils"
version.workspace = true

[dependencies]
vprogs-core-types.workspace            = true
vprogs-scheduling-scheduler.workspace  = true
vprogs-state-version.workspace         = true
vprogs-storage-rocksdb-store.workspace = true
vprogs-storage-types.workspace         = true
