[package]
edition.workspace = true
name              = "vprogs-state-version"
version.workspace = true

[dependencies]
tap.workspace                       = true
vprogs-core-types.workspace         = true
vprogs-state-ptr-latest.workspace   = true
vprogs-state-ptr-rollback.workspace = true
vprogs-state-space.workspace        = true
vprogs-storage-manager.workspace    = true
vprogs-storage-types.workspace      = true
