[package]
edition.workspace = true
name              = "vprogs-storage-rocksdb-store"
version.workspace = true

[dependencies]
num_cpus.workspace             = true
rocksdb.workspace              = true
tap.workspace                  = true
vprogs-core-crypto             = { workspace = true, features = ["host"] }
vprogs-storage-types.workspace = true
