[package]
edition.workspace = true
name              = "vprogs-storage-types"
version.workspace = true

[dependencies]
borsh.workspace                          = true
vprogs-core-smt.workspace                = true
vprogs-core-types.workspace              = true
vprogs-storage-canonical-chain.workspace = true
